[package]
name = "proc_macro_expander"
version = "0.1.0"
authors = ["roma"]

[dependencies]
dylib = "0.0.3"
quote = "0.6.11"
goblin = "0.0.21"
clap = "2.32.0"
serde_derive = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"

[dependencies.syn]
version = "0.15.30"
features = ["full", "parsing"]

[dependencies.proc-macro2]
version = "0.4.28" #"0.4.24"
features = ["nightly"]
