[package]
name = "proc_macro_expander"
version = "0.1.0"
authors = ["roma"]

[dependencies]
#dylib = "0.0.3"
quote = "1.0.2"
goblin = "0.0.24"
serde_derive = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
libloading = "0.5.2"
sharedlib = "7.0.0"

[dependencies.syn]
version = "1.0.5"
features = ["full", "parsing"]

[dependencies.proc-macro2]
version = "1.0.5" #"0.4.24"
features = ["nightly"]

[dev-dependencies]
tempfile = "3"
assert_matches = "1.3.0"